# naturtag

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTORS.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  README.md  build.bat  default_settings.yml  export.py  inat_export.py  justfile  naturtag.spec  ncbi_export.py  noxfile.py  pyproject.toml  requirements.txt  rvtest.py  setup.cfg  setup.py  test_ssim.py  test_ssim_output.txt
.github/: build_fpm.sh  get_version.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build.yml  deploy.yml  release-pypi.yml  release.yml  test.yml
assets/: README.md  example_45524803.xmp  locales.json  logo.xcf  naturtag-banner.xcf  naturtag.desktop  sprites.db  style.qss
assets/atlas/: app_icons.atlas
assets/autocomplete/: naturtag.bash  naturtag.fish  nt.fish
assets/data/: style.qss
assets/demo_images/: 48849031626_af2065ab64_k.xmp  48932501303_2a7bc17223_k.xmp  49171320303_6bd5b0eff4_k.xmp  50001986671_f8dceed760_k.xmp  50007563567_f5a3639857_k.xmp  50080376911_3ecbf66742_k.xmp  50551565108_d148978e4f_k.xmp  51137792377_f561432285_k.xmp  51487508823_db6025b1a8_k.xmp  51701649080_6d8275b44f_k.xmp  78513963.xmp  IMG20200521_141401.jpg.xmp  IMG20200521_141401.xmp  example_45524803.xmp
assets/icons/: html_logo.xcf  logo.icns  logo_icons.xcf  logo_installer.xcf  naturtag-gh-preview.xcf
docs/: Makefile  app.md  cli.md  conf.py  gui.md  index.md  index.rst  installation.md  metadata.md  naturtag_demo.cast  reference.md
kv/: autocomplete.kv  cache.kv  context_menus.kv  dropdown.kv  image_selection.kv  image_selector.kv  local_photo_context_menu.kv  main.kv  metadata.kv  metadata_view.kv  observation.kv  observation_search.kv  settings.kv  taxon.kv  taxon_search.kv  taxon_selection.kv  widgets.kv  widgets.py
naturtag/: __init__.py  app.py  atlas.py  cli.py  cli_utils.py  client.py  constants.py  file_utils.py  glob.py  gps.py  image_discovery.py  image_glob.py  image_metadata.py  imagetagger.kv  inat_darwincore.py  inat_keywords.py  inat_metadata.py  main.py  metadata_reader.py  metadata_writer.py  settings.py  setup.py  tagger.py  thumbnails.py  ui.py  validation.py
naturtag/app/: __init__.py  app.py  autocomplete.py  cache.py  controls.py  image_controller.py  image_gallery.py  image_window.py  images.py  layouts.py  logger.py  screens.py  settings_menu.py  style.py  taxon_controller.py  testapp.py  threadpool.py  toolbar.py  welcome_dialog.py
naturtag/controllers/: __init__.py  background_loader.py  background_loader_pool.py  base_controller.py  batch_loader.py  cache_controller.py  controller.py  image_controller.py  image_gallery.py  image_selection_controller.py  metadata_view_controller.py  observation_controller.py  observation_search.py  observation_search_controller.py  observation_view.py  settings_controller.py  taxon_controller.py  taxon_loader.py  taxon_search.py  taxon_search_controller.py  taxon_selection_controller.py  taxon_view.py  taxon_view_controller.py
naturtag/kv_app/: __init__.py  app.py  atlas.py  test_atlas.py
naturtag/loaders/: __init__.py  image_loader.py  taxon_loader.py
naturtag/metadata/: __init__.py  base.py  derived.py  gps.py  gps_metadata.py  image_metadata.py  inat_metadata.py  keyword_metadata.py  keywords.py  meta_metadata.py  tagger.py
naturtag/models/: __init__.py  base.py  identification.py  image_metadata.py  keyword_metadata.py  meta_metadata.py  observation.py  photo.py  taxon.py  user.py
naturtag/qt_app/: app.py  image_controller.py  image_gallery.py  image_window.py  images.py  layouts.py  logger.py  photo_controller.py  qt.py  settings_menu.py  toolbar.py
naturtag/storage/: __init__.py  app_state.py  client.py  remote_images.py  session.py  settings.py  setup.py  user_taxa.py
naturtag/ui/: __init__.py  app.py  autocomplete.py  cache.py  controller.py  image.py  image_selection_controller.py  image_selector_controller.py  screens.py  search_controller.py  settings_controller.py  taxon_search_controller.py  taxon_selection_controller.py  taxon_view_controller.py  thumbnails.py  widget_classes.py  widgets.py
naturtag/utils/: __init__.py  click_help_colors.py  i18n.py  image_glob.py  parsing.py  sprites.py  thumbnails.py  updates.py
naturtag/widgets/: __init__.py  autocomplete.py  buttons.py  dialogs.py  dropdown.py  images.py  inputs.py  labels.py  layouts.py  lists.py  logger.py  menus.py  observation_images.py  progress_bar.py  style.py  tabs.py  taxon_autocomplete.py  taxon_images.py  toggle_switch.py
packaging/: .fpm  README.md  build_appimage.sh  build_dmg.sh  build_flatpak.sh  build_fpm.sh  build_taxon_db.py  build_win.ps1  bundle_taxonomy.sh  export_fts.sh  export_taxa.sh  export_taxa_full.sh  get_version.py  import_taxa.sh  latest.txt  naturtag.aip  naturtag.desktop  naturtag.ifp  naturtag.iss  naturtag.spec  org.pyinat.naturtag.metainfo.xml  org.pyinat.naturtag.yml  validate_dmg.sh
taxgen/: __init__.py  cli.py  constants.py  format.py  image_metadata.py  inat_darwincore.py  inat_export.py  inat_keywords.py  metadata.py  ncbi_export.py  ncbi_import.py  tree_utils.py
test/: analyze_raw.py  conftest.py  minimize_raw.py  test_cli.py  test_gps.py  test_image_glob.py  test_image_metadata.py
test/app/: test_app.py  test_threadpool.py  test_welcome_dialog.py
test/controllers/: conftest.py  test_image_controller.py  test_image_gallery.py  test_observation_controller.py  test_observation_view.py  test_taxon_controller.py
test/metadata/: test_base_metadata.py  test_derived_metadata.py  test_gps.py  test_gps_metadata.py  test_image_metadata.py  test_inat_metadata.py  test_keyword_metadata.py  test_keywords.py  test_meta_metadata.py  test_tagger.py
test/sample_data/: darktable_sample.xmp  photoshop_sample.xmp  raw_with_sidecar.xmp
test/storage/: test_app_state.py  test_client.py  test_remote_images.py  test_setup.py
test/unit/: test_atlas.py  test_gps.py
widget_tests/: downloader.py  file_manager.py  kivy_asyncio.py  test_batch_loader.py  threadpool.py  tk.py
(+43 files in other folders)
