[project]
name = 'naturtag'
version = '0.8.1'
description = 'Tag your nature photos with iNat taxonomy and observation metadata'
authors = [{name = 'Jordan Cook'}]
license = {text = 'MIT'}
readme = 'README.md'
requires-python = '>=3.10,<3.13'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Win32 (MS Windows)',
    'Environment :: X11 Applications',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'Typing :: Typed',
]
dependencies = [
    'attrs>=21.2',
    'click>=8.0',
    'click-help-colors>=0.9',
    'pillow>=10.0',
    'pyexiv2>=2.10',
    'pyinaturalist>=0.20',
    'pyinaturalist-convert>=0.7.1',
    'pyside6==6.8.1',
    'pyqtdarktheme-fork>=2.3.2,<3',
    'pyyaml>=6.0',
    'qtawesome>=1.1.1,<2',
    'sqlalchemy>=2.0.23,<3',
    'tablib>=3.0,<4',
]

[project.optional-dependencies]
docs = [
    'furo>=2024.7,<2025',
    'linkify-it-py>=2.0,<3',
    'myst-parser>=3.0,<4',
    'sphinx>=7.4,<8',
    'sphinx-autodoc-typehints>=2.2,<3',
    'sphinx-copybutton>=0.5',
    'sphinx-design>=0.2',
    'sphinxcontrib-apidoc>=0.5,<1',
]

[project.scripts]
nt = 'naturtag.cli:main'
naturtag = 'naturtag.cli:main'
naturtag-ui = 'naturtag.app.app:main'

[project.urls]
Homepage = 'https://github.com/pyinat/naturtag'
Repository = 'https://github.com/pyinat/naturtag'
Documentation = 'https://naturtag.readthedocs.io'

[dependency-groups]
dev = [
    'babel>=2.0',
    'coverage>=7.0,<8',
    'nox>=2023.4',
    'pre-commit>=4.0,<5',
    'prettyprinter>=0.18',
    'pyinstaller==6.13.0',
    'pytest>=8.2,<9',
    'pytest-cov>=6.0',
    'pytest-xdist>=2.2',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.sdist]
include = [
    '*.md',
    'naturtag',
    'assets',
    'docs',
    'test',
]
exclude = [
    'assets/demo_images/*',
    'assets/screenshots/*',
    'assets/icons/*-preview.*',
    'assets/icons/*.bmp',
    'assets/icons/*.xcf',
]

[tool.hatch.build.targets.wheel]
packages = ['naturtag']
exclude = [
    'assets/demo_images/*',
    'assets/screenshots/*',
    'assets/icons/*-preview.*',
    'assets/icons/*.bmp',
    'assets/icons/*.xcf',
]

[tool.coverage.html]
directory = 'test-reports'

[tool.coverage.run]
branch = true
source = ['naturtag']

[tool.coverage.report]
exclude_lines = ['pragma: no cover', 'if TYPE_CHECKING:']

[tool.mypy]
ignore_missing_imports = true
files = ['naturtag']

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py311'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F', 'I']
ignore = ['B023']

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.isort]
known-first-party = ['test']

[tool.ruff.lint.pycodestyle]
max-line-length = 120
