[metadata]
description = A CLI tool to add iNaturalist taxonomy metadata to local observation photos
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
