[metadata]
author = Jordan Cook
description = A CLI tool to add iNaturalist taxonomy metadata to local observation photos
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_files = LICENSE
url = https://github.com/JWCook/naturtag
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
