[metadata]
author = Jordan Cook
description = A CLI tool to add iNaturalist taxonomy metadata to local observation photos
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_files = LICENSE
url = https://github.com/JWCook/naturtag
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[flake8]
max_line_length = 120
exclude = __pycache__,.tox,build,dist,test,venv
# Defer these rules to black and isort:
ignore =
    E225 # missing whitespace around operator
    E402 # module level import not at top of file
    W503 # line break before binary operator
    W504 # line break after  binary operator

# Tell mypy to ignore external libraries without type annotations
[mypy]
ignore_missing_imports = True
